infraops.yaml
AWSTemplateFormatVersion: '2010-09-09'

Description: InfraOps EC2 Instance

Parameters:

  KeyPairName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Select your EC2 Key Pair

  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: Select your Default VPC

  PublicSubnet:
    Type: AWS::EC2::Subnet::Id
    Description: Select a Public Subnet

Resources:

  InfraOpsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: InfraOps Security Group
      VpcId: !Ref VpcId

      SecurityGroupIngress:

        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0

  InfraOpsRole:
    Type: AWS::IAM::Role
    Properties:

      AssumeRolePolicyDocument:
        Version: "2012-10-17"

        Statement:

          - Effect: Allow

            Principal:
              Service:
                - ec2.amazonaws.com

            Action:
              - sts:AssumeRole

      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/CloudWatchAgentServerPolicy

  InfraOpsInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:

      Roles:
        - !Ref InfraOpsRole

  InfraOpsEC2:
    Type: AWS::EC2::Instance

    Properties:

      InstanceType: t2.micro

      ImageId: !Sub "{{resolve:ssm:/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64}}"

      KeyName: !Ref KeyPairName

      SubnetId: !Ref PublicSubnet

      IamInstanceProfile: !Ref InfraOpsInstanceProfile

      SecurityGroupIds:
        - !Ref InfraOpsSecurityGroup

      Tags:

        - Key: Name
          Value: InfraOps-Server

        - Key: Project
          Value: InfraOps

        - Key: Owner
          Value: Harsh Pawar

Outputs:

  InstanceId:
    Description: EC2 Instance ID
    Value: !Ref InfraOpsEC2

  PublicIP:
    Description: Public IP
    Value: !GetAtt InfraOpsEC2.PublicIp

  PublicDNS:
    Description: Public DNS
    Value: !GetAtt InfraOpsEC2.PublicDnsName
